--- a/config.org
+++ b/config.org
@@ -3143,15 +3143,14 @@ you can press ctrl-c right (calling =winner-redo=).
 
 ** Word Wrap
 
-I like to have lines of the same length.
+I like to have lines of the same length in text mode.
 
 #+begin_src emacs-lisp :tangle yes
   (use-package simple
     :ensure nil
     :delight (auto-fill-function)
     :bind ("C-x p" . pop-to-mark-command)
-    :hook ((prog-mode . turn-on-auto-fill)
-           (text-mode . turn-on-auto-fill))
+    :hook (text-mode . turn-on-auto-fill)
     :custom (set-mark-command-repeat-pop t))
 #+end_src
 
