fix(org): rename modules

--- a/config.org
+++ b/config.org
@@ -3259,8 +3259,8 @@ authoring documents with a fast and effective plain-text system.
     (org-log-into-drawer "LOGBOOK")
     (org-modules '(org-crypt
                    org-habit
-                   org-info
-                   org-irc
+                   ol-info
+                   ol-irc
                    org-mouse
                    org-protocol
                    org-tempo))
