refactor(org): re-use org-directory

--- a/config.org
+++ b/config.org
@@ -3391,8 +3391,9 @@ update it from several computers and smartphones.
       (org-agenda-switch-to)
       (org-capture 0 "t"))
     :custom
+    (org-directory "~/Documents/org")
     (org-agenda-dim-blocked-tasks t)
-    (org-agenda-files (directory-files-recursively "~/Documents/org/" "\\.org$"))
+    (org-agenda-files (directory-files-recursively org-directory "\\.org$"))
     (org-agenda-inhibit-startup t)
     (org-agenda-show-log t)
     (org-agenda-skip-deadline-if-done t)
@@ -3405,8 +3406,7 @@ update it from several computers and smartphones.
     (org-agenda-time-grid '((daily today require-timed)))
     (org-agenda-use-tag-inheritance t)
     (org-columns-default-format "%14SCHEDULED %Effort{:} %1PRIORITY %TODO %50ITEM %TAGS")
-    (org-default-notes-file "~/Documents/org/inbox.org")
-    (org-directory "~/Documents/org")
+    (org-default-notes-file (format "%s/%s" org-directory "inbox.org"))
     (org-enforce-todo-dependencies t)
     (org-habit-completed-glyph ?✓)
     (org-habit-graph-column 80)
