--- a/config.org
+++ b/config.org
@@ -249,6 +249,7 @@ found on the [[https://github.com/emacs-lsp/lsp-mode][lsp-mode]] page.
     (lsp-enable-snippet nil)
     (lsp-enable-on-type-formatting nil)
     (lsp-prefer-flymake nil)
+    (lsp-pyls-plugins-flake8-enabled t)
     (lsp-session-file (expand-file-name (format "%s/emacs/lsp-session-v1" xdg-data)))
     (lsp-restart 'auto-restart))
 
@@ -869,16 +870,6 @@ Let's take a look to my Python configuration:
             (revert-buffer t t t))
         (warn "python-mode: Cannot find autoflake executable."))))
 
-  (use-package lsp-pyright
-    :if (executable-find "pyright")
-    :hook (python-mode . (lambda ()
-                           (require 'lsp-pyright)
-                           (lsp))))
-
-  (use-package lsp-python-ms
-    :defer 0.3
-    :custom (lsp-python-ms-auto-install-server t))
-
   (use-package python-black
     :demand t
     :after python)
@@ -899,6 +890,16 @@ Let's take a look to my Python configuration:
         (if (member project (pyenv-mode-versions))
             (pyenv-mode-set project)
           (pyenv-mode-unset)))))
+
+  (add-hook 'pyenv-mode-hook 'lsp)
+
+  ;; Show flake8 errors in lsp-ui
+  (defun lsp-set-cfg ()
+    (let ((lsp-cfg `(:pyls (:configurationSources ("flake8")))))
+      (lsp--set-configuration lsp-cfg)))
+
+  ;; Activate that after lsp has started
+  (add-hook 'lsp-after-initialize-hook 'lsp-set-cfg)
 
   (use-package pyvenv
     :after python
