--- a/config.org
+++ b/config.org
@@ -244,7 +244,12 @@ found on the [[https://github.com/emacs-lsp/lsp-mode][lsp-mode]] page.
     :config
     (lsp-register-custom-settings
      '(("pyls.plugins.pyls_mypy.enabled" t t)
-       ("pyls.plugins.pyls_mypy.live_mode" nil t)))
+       ;; disable live mode to fix imports
+       ("pyls.plugins.pyls_mypy.live_mode" nil t)
+       ;; Disable these as they're duplicated by flake8
+       ("pyls.plugins.pycodestyle.enabled" nil t)
+       ("pyls.plugins.mccabe.enabled" nil t)
+       ("pyls.plugins.pyflakes.enabled" nil t)))
     :hook ((c-mode c++-mode java-mode json-mode python-mode typescript-mode xml-mode) . lsp)
     :custom
     (lsp-clients-typescript-server-args '("--stdio" "--tsserver-log-file" "/dev/stderr"))
@@ -863,7 +868,7 @@ Automagically resolve imports (requires =importmagic= and =epc=)
   pip install python-language-server[all]
   pip install pyls-black pyls-isort pyls-mypy
   pip install black black-macchiato isort mypy future
-  pip install flake8 eps importmagic
+  pip install flake8 epc importmagic
 #+end_src
 
 Let's take a look to my Python configuration:
