feat(python): reduce default black line length to 79

--- a/config.org
+++ b/config.org
@@ -889,7 +889,8 @@ Let's take a look to my Python configuration:
 
   (use-package python-black
     :demand t
-    :after python)
+    :after python
+    :config (setq python-black-extra-args '("--line-length 79")))
 
   (use-package py-isort
     :after python
